Fix wrapping

--- a/web/css/src/themes/default.css
+++ b/web/css/src/themes/default.css
@@ -474,8 +474,8 @@
 	}
 
 	@media (--viewport-large) {
-		padding-left: 30px;
-		padding-right: 30px;
+		padding-left: 25px;
+		padding-right: 25px;
 	}
 }
 
